objects/Account_Marketo_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account's Marketo Activity</relationshipLabel>
        <relationshipName>Account_s_Marketo_Activity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Attribute__c</fullName>
        <label>Activity Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Id__c</fullName>
        <externalId>true</externalId>
        <label>Activity Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Activity_Type_ID__c</fullName>
        <label>Activity Type ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Type</label>
        <referenceTo>Activity_Type__c</referenceTo>
        <relationshipLabel>Account's Marketo Activity</relationshipLabel>
        <relationshipName>Account_s_Marketo_Activity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_ID__c</fullName>
        <label>Campaign ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketo_Activity_Timestamp__c</fullName>
        <label>Marketo Activity Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Marketo_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketo Campaign</label>
        <referenceTo>Marketo_Campaign__c</referenceTo>
        <relationshipLabel>Account's Marketo Activity</relationshipLabel>
        <relationshipName>Account_s_Marketo_Activity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marketo_Lead_ID__c</fullName>
        <label>Marketo Lead ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Account Marketo Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Activity_Id__c</columns>
        <columns>Activity_Type__c</columns>
        <columns>Activity_Type_ID__c</columns>
        <columns>Campaign_ID__c</columns>
        <columns>Marketo_Activity_Timestamp__c</columns>
        <columns>Marketo_Campaign__c</columns>
        <columns>Marketo_Lead_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Marketing_Emails_Account_Marketo_Activity</fullName>
        <filterScope>Queue</filterScope>
        <label>Marketing Emails</label>
        <queue>Marketing_Emails</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AMA-{0000000}</displayFormat>
        <label>Account Marketo Activity  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account's Marketo Activity</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>